- New keyword MailFlag for a system definition. It's parameter is a file    name of a file that will be created if the system's inbound directory has    received any files during a diskpoll transfer session.  - Some adaptions for older Linux header files.  - Fixed the UNIX makefile to use g++ instead of gcc.  - Fix: diskpoll could not handle relative path names in the configuration    file, at least under OS/2.

--- a/HISTORY
+++ b/HISTORY
@@ -1,20 +1,28 @@
 Diskpoll 0.1.3, not yet released
- - Fix: Diskpoll forgot to poll mail for some AKAs if the downlink did not
-   have the same number of akas as the uplink.
- - Fixed a serious bug. Diskpoll was not releasing file search handles, which
-   could lead to diskpoll not "seeing" some files in the outbound. This did
-   only occur on very large outbound directories. You should upgrade anyway!
+ - New keyword MailFlag for a system definition. It's parameter is a file 
+   name of a file that will be created if the system's inbound directory has
+   received any files during a diskpoll transfer session.
  - The UNIX version now is case-tolerant, i.e. it will recognise files and
    directories no matter if they are in upper, lower or mixed case
    correctly. This enables you to access a DOS or OS/2-style outbound
    directory from a Unix machine.
+ - Some adaptions for Tru64 Unix (Digital Unix, OSF/1)
+ - Some adaptions for older Linux header files.
+ - Fixed the UNIX makefile to use g++ instead of gcc.
+ - Fix: diskpoll could not handle relative path names in the configuration
+   file, at least under OS/2.
+ - Fix: Diskpoll forgot to poll mail for some AKAs if the downlink did not
+   have the same number of akas as the uplink.
+ - Fix: Diskpoll was not releasing file search handles, which could lead to 
+   diskpoll not "seeing" some files in the outbound. This did only occur on 
+   very large outbound directories.
 
 Diskpoll 0.1.2, Released 17 Nov 1998
  - New: If the binkley outbound contains a reference to a file that
    does not exist, the reference is removed from the flowfile. This
    matches the behaviour that e.g. Binkley uses. (However, if the path
    in the reference does not exist as well, it is NOT removed to
-   avoid removing all files fromm all flowfiles when the network path
+   avoid removing all files from all flowfiles when the network path
    translation  is misconfigured or something).
  - New command line parameters: -s <flavour> and -r <flavour> specify the
    flavour of the files to send or receive. <flavour> is a string consisting
