--- a/HISTORY
+++ b/HISTORY
@@ -16,6 +16,8 @@ Diskpoll 0.1.3, not yet released
  - Fix: Diskpoll was not releasing file search handles, which could lead to 
    diskpoll not "seeing" some files in the outbound. This did only occur on 
    very large outbound directories.
+ - Makefiles reorganized, please read README.Makefiles in the husky-common
+   package!
 
 Diskpoll 0.1.2, Released 17 Nov 1998
  - New: If the binkley outbound contains a reference to a file that
