--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,6 @@
 Diskpoll 0.1.3, not yet released
+ - New "-d" option to give me additional information when users report
+   problems.
  - New keyword MailFlag for a system definition. It's parameter is a file 
    name of a file that will be created if the system's inbound directory has
    received any files during a diskpoll transfer session.
@@ -16,8 +18,6 @@ Diskpoll 0.1.3, not yet released
  - Fix: Diskpoll was not releasing file search handles, which could lead to 
    diskpoll not "seeing" some files in the outbound. This did only occur on 
    very large outbound directories.
- - Makefiles reorganized, please read README.Makefiles in the husky-common
-   package!
 
 Diskpoll 0.1.2, Released 17 Nov 1998
  - New: If the binkley outbound contains a reference to a file that
