--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,4 @@
-Diskpoll 0.1.3, not yet released
+Diskpoll 0.1.3-stable, forked off for release on 05 Aug 2000
  - Diagnosed a bug in the OS/2 Warp 4 (without mpts/peer fixes) peer/requester
    code and provided a workound option "-w" for it. See README for more info.
  - New "-d" option to give me additional information when users report
