--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+Diskpoll 0.1.4, not yet released
+
 Diskpoll 0.1.3-stable, forked off for release on 05 Aug 2000
  - Diagnosed a bug in the OS/2 Warp 4 (without mpts/peer fixes) peer/requester
    code and provided a workound option "-w" for it. See README for more info.
