--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,4 @@
-Diskpoll 0.1.3-stable, not released yet
+Diskpoll 0.1.3-stable, Released 17 Sep 2000
  - When receiving a .PKT file and a file with this name already exists, the
    new file is longer renamed to .PK1, but the base name (before the dot) is
    changed. Some tossers did not properly recognise .PK1 files.
@@ -7,7 +7,7 @@ Diskpoll 0.1.3-stable, not released yet
    code and provided a workound option "-w" for it. See README for more info.
  - New "-d" option to give me additional information when users report
    problems.
- - New keyword MailFlag for a system definition. It's parameter is a file 
+ - New keyword MailFlag for a system definition. It's parameter is a file
    name of a file that will be created if the system's inbound directory has
    received any files during a diskpoll transfer session.
  - The UNIX version now is case-tolerant, i.e. it will recognise files and
@@ -21,8 +21,8 @@ Diskpoll 0.1.3-stable, not released yet
    file, at least under OS/2.
  - Fix: Diskpoll forgot to poll mail for some AKAs if the downlink did not
    have the same number of akas as the uplink.
- - Fix: Diskpoll was not releasing file search handles, which could lead to 
-   diskpoll not "seeing" some files in the outbound. This did only occur on 
+ - Fix: Diskpoll was not releasing file search handles, which could lead to
+   diskpoll not "seeing" some files in the outbound. This did only occur on
    very large outbound directories.
 
 Diskpoll 0.1.2, Released 17 Nov 1998
